--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Noel Hilliard
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I'm a student at North Carolina State University.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/Sminnie09/Sminnie09.github.io/master/images/4262420922578.jpg
 
 #
 # Flags below are optional
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: nghillia@ncsu.edu
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: Sminnie09/Sminnie09.github.io
   instagram:
   linkedin:
   pinterest:
